<resources>
    <string name="app_name">Sherloc New</string>
    <string name="main_button_choose">Choose thief</string>
    <string name="textViewActivityChooseChoose">Choose true answer</string>
    <string name="radioCrowChooseActivity">Crow</string>
    <string name="radioDogChooseActivity">Dog</string>
    <string name="radioCatChooseActivity">Cat</string>
    <string name="buttonTrafficLightMainActivity">Play traffic light</string>
    <string name="buttonYellowTrafficLightActivity">Yellow</string>
    <string name="buttonGreenTrafficLightActivity">Green</string>
    <string name="textViewTrafficLightActivity">STOP</string>
    <string name="buttonHelloCounterCrow">Say Hello</string>
    <string name="buttonCounterCounterCrow">Count Crows</string>
    <string name="buttonDropCounterCounterCrow">Drop counter</string>
    <string name="textViewInfoCounterCrow" ></string>
    <string name="buttonCounterCrow">Play count Crows</string>
    <string name="imegeButtonBackCounterCrow">Go Back</string>
    <string name="buttonRedTrafficLightActivity">Red</string>
    <string name="about_text">
        У лукоморья дуб зеленый;\n
        Златая цеть на дубе том:\n
        И днем и ночью <b>кот ученый</b>\n
        Все ходит по цепи кругом;\n
        Идет <b>на право</b> - песнь заводит,\n
        <b>На лево</b> - сказку говорит.</string>
    <string name="activityMainButtonAbout">About program</string>
    <string name="mainActivityButtonToast">Show message</string>
    <string name="mainActivityToastMessage">Scary message</string>
    <string name="mainActivityButtonToast2">Show message - 2</string>
    <string name="mainActivityToastMessage2">Really scary message</string>
    <string name="activityMainButtonDialog">Dialod Window</string>
    <string name="activityMainButtonDisplay">display</string>
    <string name="activityDisplayButtonSetting">Display Setting</string>
    <string name="activityDisplayButtonDispSize">Display Size</string>
    <string name="activityDisplayButtonDispMetrics">Display Metrics</string>
    <string name="activityDisplayButtonDispBrightness">Display Brightness</string>
    <string name="activityDisplayTextViewBrightness">Install Brightness</string>
    <string name="activityDisplayTextViewBrightnessVoule">50%</string>
    <string name="activityDisplayButtonDispBrightnessSetting">Set Brightness 50%</string>
</resources>
