<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/choose"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip">


    <TextView
        android:id="@+id/textViewActivityChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/textViewActivityChooseChoose"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#E91E63"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="217dp">

        <RadioButton
            android:id="@+id/radioCrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioClick"
            android:text="@string/radioCrowChooseActivity"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioDog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioClick"
            android:text="@string/radioDogChooseActivity"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/radioCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioClick"
            android:text="@string/radioCatChooseActivity"
            android:textSize="18sp"/>
    </RadioGroup>
</LinearLayout>