<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityCounterCrow"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button_thief"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/buttonHelloCounterCrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCounterCrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button_traffic_light"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/buttonCounterCounterCrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHello"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/buttonDropCounterCrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button_counter_crow"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/buttonDropCounterCounterCrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCounterCrow"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/textViewInfoCounterCrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewInfoCounterCrow"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonHello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <ImageButton
        android:id="@+id/imageButtonBackCouterCrow"
        android:layout_width="55dp"
        android:layout_height="54dp"
        android:contentDescription="@string/imegeButtonBackCounterCrow"
        android:onClick="onClick"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>